# starpatters-lib

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/starpatterns/: __init__.py  core.py  fractals.py  patterns.py  shapes.py  utils.py
src/starpatters_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_starpatters.py
