[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "starpatters-lib"
version = "0.1.0"
description = "تجسم الگوهای ریاضی و گرافیکی در ترمینال با استفاده از کاراکترهای ASCII"
readme = "README.md"
authors = [
{name = "Hasan Bagheri", email = "hasan111bagher@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
"Intended Audience :: Developers",
"Intended Audience :: Education",
"Topic :: Education",
"Topic :: Artistic Software",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/0hasanbagheri0/starpatters-lib"
Repository = "https://github.com/0hasanbagheri0/starpatters-lib"
Issues = "https://github.com/0hasanbagheri0/starpatters-lib/issues"

[tool.setuptools.packages.find]
where = ["src"]
